-- What's new for ??? (???)

New Searches

* smlnk - smLNK is a link-shortening redirector where the URLs are as short as possible (from Jonathon Marshall)
* cjfr - Get the conjugation for a french verb
* webpoll - displays a graph illustrating the timings of the objects on a web page (from Dean Wilson)

Modified Searches

* setiq - yet another cosmetic change (use of <div> rather than <a>)

Enhancements

* 

Bug Fixes

* 


-- What's new for 3.1.3 (September 9, 2002)

Bug Fixes

* aliases.txt - corrected 2 aliases to reflect the change of searches names that occured in v 3.1.1

-- What's new for 3.1.2 (September 8, 2002)

Modified Searches
* bible - renamed to bg (Bible Gateway) to avoid English word "Bible"

Enhancements
* Installer fixed to delete old names for *.xml searches.
* Gg bug fixed where /directory would "stick" and apply to the next gg search.

-- What's new for 3.1.1 beta (September 6, 2002)

New Searches

* walmart - Search WalMart online.
* iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
* sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
* encarta - Microsoft Encarta (from Andrew Carpenter)
* ep - Epinions (from Andrew Carpenter)
* wc - Get the time around the world at timeanddate.com (from John Bairen)
* jsexec - Execute a Javascript command
* jsref - Search for Javascript commands reference

Modified Searches

* bible - David Thompson added switches for multiple translations
* msk - added /google switch
* setiq - cosmetic change
* wfb - standardized layout
* short - renamed to msl to avoid English word "short"
* drink - renamed to drinkstreet to avoid English word "drink"
* slash - renamed to sd to avoid English word "slash"
* phone - renamed to anywho to avoid English word "phone"
* chart - renamed to bigchart to avoid English word "chart"
* at - renamed to atech to avoid English word "at"
* pw - fixed bugs in pricewatch search
* map - improved address parsing code, renamed to mq to avoid English word "map"